--- a/about.css
+++ b/about.css
@@ -1,7 +1,13 @@
 .navBg {
-	background-color: rgb(61, 61, 61);
-	height: 90px;
-
+	background-color: rgba(61, 61, 61, 0);
+	height: 60px;
+	position: absolute;
+	top: 0px;
+	width: 100%;
+}
+.navbarImg {
+	width: 100%;
+	height: 300px;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .title {
@@ -13,7 +19,7 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 }
 .title:hover {
-	color: rgb(185, 185, 185);
+	color: rgb(211, 211, 211);
 }
 .link {
 	font-size: 20px;
