--- a/about.css
+++ b/about.css
@@ -9,6 +9,15 @@
 	width: 100%;
 	height: 300px;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	filter: brightness(70%);
+}
+.navTitle {
+	position: absolute;
+	top: 100px;
+	left: 30%;
+	color: white;
+	font-weight: 600;
+	font-size: 50px;
 }
 .title {
 	font-size: 30px;
@@ -17,6 +26,7 @@
 }
 body {
 	font-family: Arial, Helvetica, sans-serif;
+	background-color: rgb(202, 202, 202);
 }
 .title:hover {
 	color: rgb(211, 211, 211);
@@ -39,4 +49,7 @@ body {
 .cardTitle {
 	font-weight: 550;
 	margin: 4px;
+}
+.shade {
+	background-color: rgb(100, 98, 98);
 }
