--- a/about.css
+++ b/about.css
@@ -1,57 +1,60 @@
 .navBg {
-	background-color: rgba(61, 61, 61, 0);
-	height: 60px;
-	position: absolute;
-	top: 0px;
-	width: 100%;
+  background-color: rgba(61, 61, 61, 0);
+  height: 60px;
+  position: absolute;
+  top: 0px;
+  width: 100%;
 }
 .navbarImg {
-	width: 100%;
-	height: 300px;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-	filter: brightness(70%);
+  width: 100%;
+  height: 300px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  filter: brightness(70%);
 }
 .navTitlePosition {
-	position: absolute;
-	top: 100px;
-	left: 30%;
+  position: absolute;
+  top: 100px;
+  left: 30%;
 }
 .navTitle {
-	color: white;
-	font-weight: 600;
-	font-size: 50px;
+  color: white;
+  font-weight: 600;
+  font-size: 50px;
 }
 .title {
-	font-size: 30px;
-	font-weight: 700;
-	color: white;
+  font-size: 30px;
+  font-weight: 700;
+  color: white;
 }
 body {
-	font-family: Arial, Helvetica, sans-serif;
-	background-color: rgb(202, 202, 202);
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(202, 202, 202);
 }
 .title:hover {
-	color: rgb(211, 211, 211);
+  color: rgb(211, 211, 211);
 }
 .link {
-	font-size: 20px;
-	font-weight: 550;
-	color: white;
+  font-size: 20px;
+  font-weight: 550;
+  color: white;
 }
 .link:hover {
-	color: rgb(240, 240, 240);
+  color: rgb(240, 240, 240);
 }
 .spacing {
-	margin-top: 40px;
+  margin-top: 40px;
 }
 .card {
-	background-color: white;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .cardTitle {
-	font-weight: 550;
-	margin: 4px;
+  font-weight: 550;
+  margin: 4px;
 }
 .shade {
-	background-color: rgb(100, 98, 98);
+  background-color: rgb(100, 98, 98);
+}
+.endpage {
+  margin-bottom: 40px;
 }
