--- a/index.css
+++ b/index.css
@@ -1,36 +1,50 @@
 .navBg {
-	background-color: rgb(61, 61, 61);
-	height: 90px;
+  background-color: rgb(61, 61, 61);
+  height: 90px;
 
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .title {
-	font-size: 30px;
-	font-weight: 700;
-	color: white;
+  font-size: 30px;
+  font-weight: 700;
+  color: white;
 }
 body {
-	font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(202, 202, 202);
 }
 .title:hover {
-	color: rgb(185, 185, 185);
+  color: rgb(185, 185, 185);
 }
 .link {
-	font-size: 20px;
-	font-weight: 550;
-	color: white;
+  font-size: 20px;
+  font-weight: 550;
+  color: white;
 }
 .link:hover {
-	color: rgb(240, 240, 240);
+  color: rgb(240, 240, 240);
 }
 .spacing {
-	margin-top: 40px;
+  margin-top: 40px;
+}
+.extraSpacing {
+  margin-top: 100px;
 }
 .card {
-	background-color: white;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .cardTitle {
-	font-weight: 550;
-	margin: 4px;
+  font-weight: 550;
+  margin: 4px;
+}
+.cardDescription {
+  font-size: 130%;
+  margin: 4px;
+}
+.logo {
+  width: 85px;
+}
+.endpage {
+  margin-bottom: 40px;
 }
