--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 .navBg {
   background-color: rgb(0, 0, 0);
-  height: 90px;
+  height: 120px;
 
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -8,6 +8,12 @@
   font-size: 30px;
   font-weight: 700;
   color: white;
+}
+.mainTitle {
+  text-align: center;
+  font-size: 45px;
+  font-weight: bold;
+  color: rgb(29, 29, 29);
 }
 body {
   font-family: Arial, Helvetica, sans-serif;
